Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11855

NMake Generator missing with CMake projects

XMLWordPrintable

      I tried to open a project, which uses CMake as the build system, with the new QtCreator 3.0.82 - shipped along with the Qt 5.3 beta offline installer. It always opened the project and built with Qt5.2 + QtCreator 3.0(and lower) successfully. In the new version, it doesn't show the option to use the NMake Generator, defaulting to the Ninja generator, rendering the IDE useless to CMake-NMake projects.

      CMake wizards:

      Qt 5.2 + QtCreator 3.0: http://i.imgur.com/MjfeeJE.png
      Qt 5.3 + QtCreator 3.0.82: http://i.imgur.com/V8sB5w2.png

        For Gerrit Dashboard: QTCREATORBUG-11855
        # Subject Branch Project Status CR V

            dt Daniel Teske
            matt_taws Mathäus Mendel
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes