CMake: Offer Nmake generator for VS 2013

Task-number: QTCREATORBUG-11855
Change-Id: Ieba3c61d292831662184517c55f081792e2381bb
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>